--- a/modal.html
+++ b/modal.html
@@ -1,97 +1,146 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
-      integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N"
-      crossorigin="anonymous"
-    />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
+        integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous" />
 </head>
-<body>
-    <!-- button for modal -->
-    <button type="button" class=" btn btn-info m-2 p-1" data-toggle="modal" data-target="#modal1">Vintage Ferrari Car</button>
-    <button type="button" class=" btn btn-danger m-2 p-1" data-toggle="modal" data-target="#modal2">Vintage Camero</button>
-    <button type="button" class=" btn btn-primary m-2 p-1" data-toggle="modal" data-target="#modal3">Range Rover</button>
 
-    <!-- Modal Start -->
-    <div class="modal " id="modal1" data-backdrop="static">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h1 class="text-primary text-centre">This is heading</h1>
-                    <button class="close" type="button" data-dismiss="modal">
-                        <span>&times;</span>
-                    </button>
+<body>
+    <div class="header">
+        <h1 class="text-center text-primary p-1 m-1 bg-warning border border-primary">Cars Collection</h1>
+    </div>
+    <div class="body">
+        <div class="row">
+            <div class="col">
+                <div class="card text-center m-1 " style="width:350px">
+                    <div class="card-header"><h1>Card header</h1></div>
+                    <div class="card-body">Card body Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                        Voluptatibus expedita obcaecati dolores assumenda architecto, consequatur in dolorem omnis
+                        voluptas voluptate.</div>
+                    <div class="card-footer">
+                        <button type="button" class=" btn btn-info m-2 p-1" data-toggle="modal"
+                            data-target="#modal1">Vintage Ferrari Car</button>
+                    </div>
                 </div>
-                <div class="modal-body text-center">
-                    <img src="./media/old classic ferrari_.jpeg" alt="" class="img-thumbnail">
-                    <p class="text-justify">
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab vel amet porro, inventore, dolorem quasi odit a facilis laborum quae consectetur ducimus aperiam laudantium, officia non nostrum maxime animi iusto fuga ut cum id atque nisi aliquam. Sint distinctio ducimus, est temporibus iure nisi saepe vitae eum necessitatibus esse adipisci?
-                    </p>
+            </div>
+            <div class="col">
+                <div class="card text-center m-1 " style="width:350px">
+                    <div class="card-header">Card header
+                        <img src="" alt="">
+                    </div>
+                    <div class="card-body">Card body Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                        Voluptatibus expedita obcaecati dolores assumenda architecto, consequatur in dolorem omnis
+                        voluptas voluptate.</div>
+                    <div class="card-footer">
+                        <button type="button" class=" btn btn-danger m-2 p-1" data-toggle="modal"
+                            data-target="#modal2">Vintage Camero</button>
+                    </div>
                 </div>
-                <div class="modal-footer">
-                    <button class="close" type="button" data-dismiss="modal">Close</button>
+            </div>
+
+            <div class="col">
+                <div class="card text-center m-1 " style="width:350px">
+                    <div class="card-header">Card header</div>
+                    <div class="card-body">Card body Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                        Voluptatibus expedita obcaecati dolores assumenda architecto, consequatur in dolorem omnis
+                        voluptas voluptate.</div>
+                    <div class="card-footer">
+                        <button type="button" class=" btn btn-primary m-2 p-1" data-toggle="modal"
+                            data-target="#modal3">Range Rover</button>
+
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-    <div class="modal " id="modal2" data-backdrop="static">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h1 class="text-primary text-centre">This is heading</h1>
-                    <button class="close" type="button" data-dismiss="modal">
-                        <span>&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body text-center">
-                    <img src="./media/USA Classic Cars _ Chevy Camaro 🔥 _ Facebook.jpeg" alt="" class="img-thumbnail">
-                    <p class="text-justify">
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab vel amet porro, inventore, dolorem quasi odit a facilis laborum quae consectetur ducimus aperiam laudantium, officia non nostrum maxime animi iusto fuga ut cum id atque nisi aliquam. Sint distinctio ducimus, est temporibus iure nisi saepe vitae eum necessitatibus esse adipisci?
-                    </p>
-                </div>
-                <div class="modal-footer">
-                    <button class="close btn" type="button" data-dismiss="modal">Close</button>
+        <!-- button for modal -->
+
+        <!-- Modal Start -->
+        <div class="modal " id="modal1" data-backdrop="static">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h1 class="text-primary text-centre">This is heading</h1>
+                        <button class="close" type="button" data-dismiss="modal">
+                            <span>&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body text-center">
+                        <img src="./media/old classic ferrari_.jpeg" alt="" class="img-thumbnail">
+                        <p class="text-justify">
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab vel amet porro, inventore,
+                            dolorem quasi odit a facilis laborum quae consectetur ducimus aperiam laudantium, officia
+                            non nostrum maxime animi iusto fuga ut cum id atque nisi aliquam. Sint distinctio ducimus,
+                            est temporibus iure nisi saepe vitae eum necessitatibus esse adipisci?
+                        </p>
+                    </div>
+                    <div class="modal-footer">
+                        <button class="btn btn-danger" type="button" data-dismiss="modal">Close</button>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-    <div class="modal " id="modal3" data-backdrop="static">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h1 class="text-primary text-centre">This is heading</h1>
-                    <button class="close" type="button" data-dismiss="modal">
-                        <span>&times;</span>
-                    </button>
+        <div class="modal " id="modal2" data-backdrop="static">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h1 class="text-primary text-centre">This is heading</h1>
+                        <button class="close" type="button" data-dismiss="modal">
+                            <span>&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body text-center">
+                        <img src="./media/USA Classic Cars _ Chevy Camaro 🔥 _ Facebook.jpeg" alt=""
+                            class="img-thumbnail">
+                        <p class="text-justify">
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab vel amet porro, inventore,
+                            dolorem quasi odit a facilis laborum quae consectetur ducimus aperiam laudantium, officia
+                            non nostrum maxime animi iusto fuga ut cum id atque nisi aliquam. Sint distinctio ducimus,
+                            est temporibus iure nisi saepe vitae eum necessitatibus esse adipisci?
+                        </p>
+                    </div>
+                    <div class="modal-footer">
+                        <button class="btn btn-danger" type="button" data-dismiss="modal">Close</button>
+                    </div>
                 </div>
-                <div class="modal-body text-center">
-                    <img src="./media/new range rover.jpeg" alt="" class="img-thumbnail">
-                    <p class="text-justify">
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab vel amet porro, inventore, dolorem quasi odit a facilis laborum quae consectetur ducimus aperiam laudantium, officia non nostrum maxime animi iusto fuga ut cum id atque nisi aliquam. Sint distinctio ducimus, est temporibus iure nisi saepe vitae eum necessitatibus esse adipisci?
-                    </p>
-                </div>
-                <div class="modal-footer">
-                    <button class="close btn" type="button" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+        <div class="modal " id="modal3" data-backdrop="static">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h1 class="text-primary text-centre">This is heading</h1>
+                        <button class="close" type="button" data-dismiss="modal">
+                            <span>&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body text-center">
+                        <img src="./media/new range rover.jpeg" alt="" class="img-thumbnail">
+                        <p class="text-justify">
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab vel amet porro, inventore,
+                            dolorem quasi odit a facilis laborum quae consectetur ducimus aperiam laudantium, officia
+                            non nostrum maxime animi iusto fuga ut cum id atque nisi aliquam. Sint distinctio ducimus,
+                            est temporibus iure nisi saepe vitae eum necessitatibus esse adipisci?
+                        </p>
+                    </div>
+                    <div class="modal-footer">
+                        <button class="btn btn-danger" type="button" data-dismiss="modal">Close</button>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 
     <!-- ******************************************************************************** -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
-      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
