--- a/modal.html
+++ b/modal.html
@@ -16,11 +16,18 @@
     <div class="body">
         <div class="row">
             <div class="col">
-                <div class="card text-center m-1 " style="width:350px">
-                    <div class="card-header"><h1>Card header</h1></div>
-                    <div class="card-body">Card body Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                        Voluptatibus expedita obcaecati dolores assumenda architecto, consequatur in dolorem omnis
-                        voluptas voluptate.</div>
+                <div class="card  m-1 " style="width:350px">
+                    <div class="card-header text-center">
+                        <h3>Vintage Ferrari</h3>
+                    </div>
+                    <div class="card-body">
+                        <h4>Ferrari 250 GTO.</h4>
+                        <p class="text-justify">This 1962 model has a 2953.21 cc V12 engine with 300 horsepower at 7400
+                            rpm. It has a
+                            single-plate clutch, dry sump lubrication, and six Weber 38 DCN carburettors.
+                        </p>
+
+                    </div>
                     <div class="card-footer">
                         <button type="button" class=" btn btn-info m-2 p-1" data-toggle="modal"
                             data-target="#modal1">Vintage Ferrari Car</button>
@@ -28,26 +35,35 @@
                 </div>
             </div>
             <div class="col">
-                <div class="card text-center m-1 " style="width:350px">
-                    <div class="card-header">Card header
-                        <img src="" alt="">
+                <div class="card  m-1 " style="width:350px">
+                    <div class="card-header">
+                        <h3>Classic Camero</h3>
                     </div>
-                    <div class="card-body">Card body Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                        Voluptatibus expedita obcaecati dolores assumenda architecto, consequatur in dolorem omnis
-                        voluptas voluptate.</div>
+                    <div class="card-body">
+                        <h4>1969 Camaro Z28.</h4>
+                        <p class="text-justify">This model had a 302 cubic inch (cid) ohv V-8 engine, 4-speed manual
+                            transmission, and a top
+                            speed of 124–132 miles per hour. It also had a wheelbase of 108 inches, front disc brakes,
+                            and rear drum brakes. </p>
+                    </div>
                     <div class="card-footer">
-                        <button type="button" class=" btn btn-danger m-2 p-1" data-toggle="modal"
+                        <button type="button" class=" btn btn-danger m-2 p-" data-toggle="modal"
                             data-target="#modal2">Vintage Camero</button>
                     </div>
                 </div>
             </div>
 
             <div class="col">
-                <div class="card text-center m-1 " style="width:350px">
-                    <div class="card-header">Card header</div>
-                    <div class="card-body">Card body Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                        Voluptatibus expedita obcaecati dolores assumenda architecto, consequatur in dolorem omnis
-                        voluptas voluptate.</div>
+                <div class="card  m-1 " style="width:350px">
+                    <div class="card-header ">
+                        <h3>Range Rover</h3>
+                    </div>
+                    <div class="card-body">
+                        <h4>Range Rover Sport.</h4>
+                        <p class="text-justify">Sporting luxury and effortless on-road performance with trademark Range
+                            Rover refinement. Assertive, confident and muscular, Range Rover Sport delivers unparalleled
+                            road presence.</p>
+                    </div>
                     <div class="card-footer">
                         <button type="button" class=" btn btn-primary m-2 p-1" data-toggle="modal"
                             data-target="#modal3">Range Rover</button>
