--- a/modal_accordian_task.html
+++ b/modal_accordian_task.html
@@ -13,7 +13,7 @@
     <div class="header">
         <h1 class="text-center text-light bg-dark p-1 m-1 bg-warning border border-primary">Indian Festivals</h1>
     </div>
-    <div class="accordion">
+    <div class="accordion" style="width: 500px;">
         <div class="card">
             <div class="card-header">
                 <h2>
@@ -31,6 +31,7 @@
                         festivals in India and across the world. It symbolizes the victory of light over darkness, good
                         over evil, and knowledge over ignorance. The festival usually lasts for five days and falls
                         between October and November, depending on the lunar calendar.</p>
+                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modal1">Know More</button>
                 </div>
             </div>
         </div>
@@ -53,7 +54,10 @@
                         Holi, also known as the Festival of Colors, is a vibrant and joyous Hindu festival celebrated
                         predominantly in India and Nepal, but also across the world. It marks the arrival of spring, the
                         victory of good over evil, and is a celebration of love, unity, and renewal. Holi is typically
-                        celebrated in March, on the full moon day of the Hindu month of Phalguna.</p>
+                        celebrated in March, on the full moon day of the Hindu month of Phalguna.
+                    </p>
+                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modal2">Know More</button>
+
                 </div>
             </div>
         </div>
@@ -69,15 +73,18 @@
                     </button>
                 </h2>
             </div>
-            <div class="collapse" id="col3">
-                <div class="card-body">
+            <div class="collapse" id="col3" >
+                <div class="card-body" >
                     <img src="./media/Durga Puja - A most significant festivals in India.jpeg" alt="" width="200px"
                         class="img-thumbnail">
                     <p>Navratri is a significant Hindu festival dedicated to the worship of Goddess Durga and her nine
                         forms, symbolizing the victory of good over evil. The word Navratri means "nine nights" in
                         Sanskrit, and the festival spans over nine days, typically celebrated in the months of September
                         or October, depending on the lunar calendar. It is one of the most widely celebrated festivals
-                        in India, with different regions having unique rituals, dances, and traditions.</p>
+                        in India, with different regions having unique rituals, dances, and traditions.
+                    </p>
+                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modal3">Know More</button>
+
                 </div>
             </div>
         </div>
@@ -101,12 +108,91 @@
                         festivals in India, dedicated to Lord Ganesha, the elephant-headed deity of wisdom, prosperity,
                         and new beginnings. This vibrant and joyous festival is observed annually and typically lasts
                         for 10 days, starting on the fourth day of the Hindu month of Bhadrapada, which usually falls in
-                        August or September.</p>
+                        August or September.
+                    </p>
+                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modal4">Know More</button>
+
                 </div>
             </div>
         </div>
     </div>
+<!-- ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+                                           MODAL
+     ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
 
+
+    <div class="modal" id="modal1" data-backdrop="static">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="text-secondary">Diwali Festival Of Lights</h1>
+                    <button class="close" type="button" data-dismiss="modal">
+                        <span>&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <img src="./media/10-Day Best of Thailand Lantern Festival Tour 2025.jpeg" alt="" class="img-thumbnail">
+                    <p class="text-justify">
+                        Lorem ipsum door sit amet consectetur, adipisicing elit. Minus vel fuga consequuntur dicta accusamus unde provident laboriosam aperiam enim, quasi similique praesentium alias maxime distinctio in quam fugit harum obcaecati.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal" id="modal2" data-backdrop="static">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="text-secondary">Holi</h1>
+                    <button class="close" type="button" data-dismiss="modal">
+                        <span>&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <img src="./media/Wishing all a very Happy and Wonderful Holi_.jpeg" alt="" class="img-thumbnail">
+                    <p class="text-justify">
+                        Lorem ipsum door sit amet consectetur, adipisicing elit. Minus vel fuga consequuntur dicta accusamus unde provident laboriosam aperiam enim, quasi similique praesentium alias maxime distinctio in quam fugit harum obcaecati.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal" id="modal3" data-backdrop="static">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="text-secondary">Navratri</h1>
+                    <button class="close" type="button" data-dismiss="modal">
+                        <span>&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <img src="./media/Durga Puja - A most significant festivals in India.jpeg" alt="" class="img-thumbnail">
+                    <p class="text-justify">
+                        Lorem ipsum door sit amet consectetur, adipisicing elit. Minus vel fuga consequuntur dicta accusamus unde provident laboriosam aperiam enim, quasi similique praesentium alias maxime distinctio in quam fugit harum obcaecati.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal" id="modal4" data-backdrop="static">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="text-secondary">Ganesh Festival</h1>
+                    <button class="close" type="button" data-dismiss="modal">
+                        <span>&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <img src="./media/Ganpati Pandals In Mumbai To Visit This Ganesh Festival.jpeg" alt="" class="img-thumbnail">
+                    <p class="text-justify">
+                        Lorem ipsum door sit amet consectetur, adipisicing elit. Minus vel fuga consequuntur dicta accusamus unde provident laboriosam aperiam enim, quasi similique praesentium alias maxime distinctio in quam fugit harum obcaecati.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- ******************************************************************************** -->
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
